# ABAP_CHECK_MCP

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
abap/: DEPLOYMENT_GUIDE.md  README.md
abap/function_group/: ZSYNTAX_CHECK.fugr.xml
abap/function_module/: Z_CHECK_ABAP_SYNTAX.abap
abap/types/: ZSYNTAX_ERROR.abap
config/: .env.example  config.example.json
src/: __init__.py  __main__.py  config.py  logger.py  main.py  models.py  rfc_client.py  server.py  tool_handler.py
tests/: __init__.py  test_tool_handler.py
